--- a/PharmacyProject/Views/Drugs/GetDrugs.cshtml
+++ b/PharmacyProject/Views/Drugs/GetDrugs.cshtml
@@ -38,7 +38,7 @@
                     <td>@item.Count</td>
                     <td>@item.ExpirationDate.ToShortDateString()</td>
                     <td>
-                        <form method="post" action="@Url.Action("AddToOrder", "Home")">
+                        <form method="post" action="@Url.Action("AddToOrder", "Drugs")">
                             @Html.AntiForgeryToken()
                             <input type="hidden" name="itemId" value="@item.Id" />
                             <div class="quantity-container">
